added edit app page and fixed breadcrumbs
